--- a/index.html
+++ b/index.html
@@ -8,7 +8,30 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="header"></div>
+			<div class="header">
+				<div class="header-up">
+					<input type="text" placeholder="Search.." />
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+						<title>bell</title>
+						<path
+							d="M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M14,21A2,2 0 0,1 12,23A2,2 0 0,1 10,21"
+						/>
+					</svg>
+					<img src="images/facebook-person.avif" alt="" />
+					<span style="font-size: 32px">Oussama Lejmi</span>
+				</div>
+				<div class="header-down">
+					<div>
+						<p>Hi there ,</p>
+						<p>Oussama Lejmi (@oussama)</p>
+					</div>
+					<div>
+						<button>New</button>
+						<button>Upload</button>
+						<button>Share</button>
+					</div>
+				</div>
+			</div>
 			<div class="sidebar">
 				<div class="side-element title">
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
