Build the projects section

--- a/index.html
+++ b/index.html
@@ -117,7 +117,48 @@
 					<span>Privacy</span>
 				</div>
 			</div>
-			<div class="main-content"></div>
+			<div class="main-content">
+				<div class="projects">
+					<h3>Your Projects</h3>
+					<div class="project">
+						<h4>First Project</h4>
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, veniam repellendus?
+						Dolorem consequatur eaque eos voluptatum nobis ab cumque suscipit distinctio quo? Ipsa
+						eligendi ipsum officiis! Officia veritatis ipsa aliquid?
+					</div>
+					<div class="project">
+						<h4>Second Project</h4>
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, veniam repellendus?
+						Dolorem consequatur eaque eos voluptatum nobis ab cumque suscipit distinctio quo? Ipsa
+						eligendi ipsum officiis! Officia veritatis ipsa aliquid?
+					</div>
+					<div class="project">
+						<h4>Third Project</h4>
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, veniam repellendus?
+						Dolorem consequatur eaque eos voluptatum nobis ab cumque suscipit distinctio quo? Ipsa
+						eligendi ipsum officiis! Officia veritatis ipsa aliquid?
+					</div>
+					<div class="project">
+						<h4>Fourth Project</h4>
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, veniam repellendus?
+						Dolorem consequatur eaque eos voluptatum nobis ab cumque suscipit distinctio quo? Ipsa
+						eligendi ipsum officiis! Officia veritatis ipsa aliquid?
+					</div>
+					<div class="project">
+						<h4>Fifth Project</h4>
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, veniam repellendus?
+						Dolorem consequatur eaque eos voluptatum nobis ab cumque suscipit distinctio quo? Ipsa
+						eligendi ipsum officiis! Officia veritatis ipsa aliquid?
+					</div>
+					<div class="project">
+						<h4>sixth Project</h4>
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, veniam repellendus?
+						Dolorem consequatur eaque eos voluptatum nobis ab cumque suscipit distinctio quo? Ipsa
+						eligendi ipsum officiis! Officia veritatis ipsa aliquid?
+					</div>
+				</div>
+				<div class="announcements"></div>
+			</div>
 		</div>
 	</body>
 </html>
