Add the announcements section

--- a/index.html
+++ b/index.html
@@ -157,7 +157,26 @@
 						eligendi ipsum officiis! Officia veritatis ipsa aliquid?
 					</div>
 				</div>
-				<div class="announcements"></div>
+				<div class="announcements">
+					<h3>Announcements</h3>
+					<div>
+						<h4>Site Maintenance</h4>
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, veniam repellendus?
+						Dolorem consequatur eaque eos voluptatum nobis ab cumque
+					</div>
+					<hr />
+					<div>
+						<h4>Community Share Day</h4>
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, veniam repellendus?
+						Dolorem consequatur eaque eos voluptatum nobis ab cumque
+					</div>
+					<hr />
+					<div>
+						<h4>Updated Privacy Policy</h4>
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, veniam repellendus?
+						Dolorem consequatur eaque eos voluptatum nobis ab cumque
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
